implemented MyArrayList.java